--- a/src/main/resources/fxml/BookmarkView.fxml
+++ b/src/main/resources/fxml/BookmarkView.fxml
@@ -55,7 +55,7 @@
                                     </graphic>
                                 </Button>
                                 <TextField fx:id="locationBar" onKeyPressed="#handleLocationBarKeyPressed" prefWidth="200.0" HBox.hgrow="ALWAYS" HBox.margin="$x2" />
-                                <ProgressIndicator fx:id="webIndicator" visible="false" progress="-1.0" styleClass="throbber">
+                                <ProgressIndicator fx:id="webIndicator" progress="-1.0" styleClass="throbber" visible="false">
                                     <HBox.margin>
                                         <Insets />
                                     </HBox.margin>
@@ -72,7 +72,8 @@
                     <top>
                         <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                             <items>
-                                <Button mnemonicParsing="false" onAction="#handleDiigoButtonAction" styleClass="diigo-button" text="diigolet" />
+                                <Button mnemonicParsing="false" onAction="#handleDiigoButtonAction" styleClass="diigo-button" text="Diigolet" />
+                                <Button mnemonicParsing="false" styleClass="evernote-button" text="Clip" />
                             </items>
                         </ToolBar>
                     </top>
