Evernote Webクリッパーを起動する機能を追加。

--- a/src/main/resources/fxml/BookmarkView.fxml
+++ b/src/main/resources/fxml/BookmarkView.fxml
@@ -73,7 +73,7 @@
                         <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                             <items>
                                 <Button mnemonicParsing="false" onAction="#handleDiigoButtonAction" styleClass="diigo-button" text="Diigolet" />
-                                <Button mnemonicParsing="false" styleClass="evernote-button" text="Clip" />
+                                <Button mnemonicParsing="false" onAction="#handleClipButtonAction" styleClass="evernote-button" text="Clip" />
                             </items>
                         </ToolBar>
                     </top>
