--- a/src/main/resources/fxml/BookmarkView.fxml
+++ b/src/main/resources/fxml/BookmarkView.fxml
@@ -75,6 +75,8 @@
                                 <Button mnemonicParsing="false" onAction="#handleDiigoButtonAction" styleClass="diigo-button" text="Diigolet" />
                                 <Button mnemonicParsing="false" onAction="#handleClipButtonAction" styleClass="evernote-button" text="Clip" />
                                 <Region HBox.hgrow="ALWAYS" />
+                                <Label fx:id="pageTitle" styleClass="page-title" />
+                                <Region HBox.hgrow="ALWAYS" />
                                 <TextField fx:id="pageSearchBox" promptText="Find in page" />
                             </items>
                         </ToolBar>
