--- a/src/main/resources/fxml/BookmarkView.fxml
+++ b/src/main/resources/fxml/BookmarkView.fxml
@@ -11,7 +11,7 @@
 
 <StackPane id="StackPane" fx:id="basePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="aoetk.bookmarkviewer.view.BookmarkViewController">
     <children>
-        <SplitPane dividerPositions="0.14023372287145242, 0.35058430717863104" focusTraversable="true" prefHeight="160.0" prefWidth="200.0" styleClass="background">
+        <SplitPane fx:id="baseSplitPane" dividerPositions="0.14023372287145242, 0.35058430717863104" focusTraversable="true" prefHeight="160.0" prefWidth="200.0" styleClass="background">
             <items>
                 <BorderPane prefHeight="200.0" prefWidth="200.0">
                     <center>
