--- a/src/main/resources/styles/Styles.css
+++ b/src/main/resources/styles/Styles.css
@@ -12,6 +12,28 @@
     -fx-text-fill: green;
 }
 
+.toolbar-button {
+    -fx-background-color: transparent;
+}
+
+.toolbar-button:hover {
+    -fx-background-color: -fx-outer-border, -fx-inner-border, -fx-body-color;
+    -fx-background-insets: 0, 1, 2;
+    -fx-background-radius: 5, 4, 3;
+    -fx-padding: 0.333333em 0.666667em 0.416667em 0.666667em; /* 4 8 5 8 */
+    -fx-text-fill: -fx-text-base-color;
+}
+
+.toolbar-button:armed {
+    -fx-background-color: -fx-faint-focus-color, -fx-focus-color, -fx-inner-border, -fx-body-color;
+    -fx-background-insets: -2, -0.3, 1, 2;
+    -fx-background-radius: 7, 6, 4, 3;
+}
+
+.toolbar-button:disabled {
+    -fx-opacity: -fx-disabled-opacity;
+}
+
 .bookmark-title {
     -fx-font-size: 1.2em;
 }
