ブラウザが非ロード中の時はロケーションバーがいっぱいに広がるように変更

--- a/src/main/resources/fxml/BookmarkView.fxml
+++ b/src/main/resources/fxml/BookmarkView.fxml
@@ -57,7 +57,7 @@
                                           </graphic>
                                       </Button>
                                       <TextField fx:id="locationBar" onKeyPressed="#handleLocationBarKeyPressed" prefWidth="200.0" HBox.hgrow="ALWAYS" HBox.margin="$x2" />
-                                      <ProgressIndicator fx:id="webIndicator" progress="-1.0" styleClass="throbber" visible="false">
+                                      <ProgressIndicator fx:id="webIndicator" progress="-1.0" styleClass="throbber" managed="false" visible="false">
                                           <HBox.margin>
                                               <Insets />
                                           </HBox.margin>
